--- a/backend/etc/config.yaml
+++ b/backend/etc/config.yaml
@@ -16,3 +16,8 @@ Database:
   ParseTime: True
   MaxIdleConns: 10
   MaxOpenConns: 30
+Server:
+  RunMode: debug
+  HttpPort: 8080
+  ReadTimeout: 60
+  WriteTimeout: 60
