--- a/backend/etc/config.yaml
+++ b/backend/etc/config.yaml
@@ -16,6 +16,7 @@ Database:
   ParseTime: True
   MaxIdleConns: 10
   MaxOpenConns: 30
+  Path: ./var/db/games.db
 Server:
   RunMode: debug
   HttpPort: 8080
